2009-12-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/updown.c: Fix possible snprintf overrun.

2009-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: change version number to 2.4

2009-11-17  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/dial.c: Overflow fix because of too long translated message,
	              by Vladimir V. Kamarzin, #312083

2009-11-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* INSTALL: delete, comes with automake

	* configure.in: change version number to 2.4-rc1

	* src/minicom.c: Remove experimental tag for character set conversion.

	* NEWS: update to 2.4

2009-11-15  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* autogen.sh: Use automake-1.11

2009-07-25  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/minicom.1: Add options -b, -D and -R.

	* src/minicom.c: Remove environment variable for the remote
	  charset and make it available via option -R.

2009-06-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.h, src/minicom.c, src/config.c:
	  Add options -D and -b to give a device file name and a baudrate,
	  overwriting the values given in the configuration file. Add
	  speed_valie(unsigned) function.

	* minicom.spec.in, doc/Makefile.am, man/minicom.1, src/config.c,
	  src/dial.c, src/main.c, src/minicom.c, src/minicom.h,
	  src/port.h, src/updown.c, src/util.c: remove all code
	  that deals with running as suid-root. Also remove minicom.users
	  as it's not needed anymore. Handle permissions within the
	  file-system.

	* src/sysdep1.c: make a function static

	* src/main.c, src/minicom.h, src/updown.c: Consolidate lockfile
	  handling into separate functions and use them, also do lockfile
	  handling before and after launching kermit.

	* src/rwconf.c: Add -b %b (Baudrate) to kermit command call.

2009-06-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/common.c, src/config.c, src/dial.c, src/file.c, src/minicom.c: